--- a/info.yaml
+++ b/info.yaml
@@ -7,7 +7,8 @@ project:
 # Source files must be in ./src and you must list each source file separately
   source_files:        
     - tt_um_rgbled_decoder.v
-    - decoder.v
+    - tt_um_rgbled.v
+    - tt_um_spi.v
   top_module:  "tt_um_rgbled_decoder"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
 # How many tiles your design occupies? A single tile is about 167x108 uM.
